server/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: go-backend-service
# spec:
#   selector:
#     app: go-backend
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#   type: NodePort

kind: Service
apiVersion: v1
metadata:
  name: go-backend-service
spec:
  selector:
    app: go-backend
  ports:
  - protocol: TCP
    port: 3000
  type: ClusterIP
